# aoc2024

./: .gitignore  README.md  aoc2024.opam  dune-project
lib/: task1.ml  task2.ml  task3.ml  task4.ml  task5.ml  task6.ml  task7.ml
