(lang dune 3.17)

(name aoc2024)

(generate_opam_files true)

(source
 (github justynoh/aoc2024))

(authors "Justyn Oh <justynoh@gmail.com>")

(maintainers "Justyn Oh <justynoh@gmail.com>")

(license MIT)

(package
 (name aoc2024)
 (synopsis "Solution to AOC 2024")
 (description "Justyn's solutions to AOC 2024")
 (depends ocaml)
 (tags
  ("aoc" "2024")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
